# apu

./: README.md
.github/: commit_template.txt  pull_request_template.md
backend/: .gitignore  Cargo.toml  compose.yml
backend/migrations/: 20260701060807_create_initial_schema.sql
backend/src/: config.rs  main.rs
backend/src/domains/auth/: middleware.rs  mod.rs  routes.rs  schema.rs
backend/src/shared/email/: mock.rs  mod.rs  resend.rs
