[package]
name = "apu-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
password-hash = "0.6.1"
reqwest = { version = "0.13.4", features = ["json"] }
resend-rs = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sha256 = "1.6.0"
sqlx = { version = "0.9.0", features = ["chrono", "ipnetwork", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
